# ClearTone_app

./: .gitignore  AMPLIFICATION_README.md  AUDIO_ENGINE_UPGRADE_PLAN.md  README.md  design_file.pen  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h
android/app/src/main/kotlin/com/example/cleartone/: MainActivity.kt
android/gradle/wrapper/: gradle-wrapper.properties
docs/: branch_diff_master_vs_daham_stable_v1.md
lib/: audio_engine_ffi.dart  audio_generator.dart  main.dart  path_finder.dart  profile_storage.dart
lib/Pages/: amplification_screen.dart  home_screen.dart  home_wrapper.dart  profile_screen.dart  profile_selection_screen.dart  results_screen.dart  screen_test.dart
lib/models/: hearing_test_result.dart  profile.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
test/: widget_test.dart
web/: index.html  manifest.json
